# agent

./: .env  .gitignore  README.md  about.html  agent-csr.csr  agent_connector_diagram.xml  ca-crt.pem  ca-key.pem  client-crt.pem  client-csr.pem  client-key.pem  nxt_agent.js  nxt_app.js  nxt_auth.js  nxt_bind_sockets.js  nxt_client_hash.js  nxt_common.js  nxt_connector.js  nxt_portal.js  package.json  portal-cert.pem  portal-key.pem  proxy.pac  server-crt.pem  server-csr.pem  server-key.pem
docs/: DNS.md  compiling_rust.md  flows.md  platforms.md
go/: Dockerfile  Dockerfile.build  Dockerfile.prod  Makefile  README.md  go.mod
go/agent/: README.md  agent.go
go/agent/lib/: agent.go
go/connector/: connector.go  go.mod  onboard.go  pkce.go
go/conntrack/: conn_test.go  flow.go  nat.go
go/files/: gitlab.sh  run.sh  run_prod.sh
go/files/http/config/: lighttpd.conf
go/files/okta/: login.html
go/shared/: go.mod  login.go  shared.go
go/test/integ/: agent.go  all_test.go  connector.go  dummyintf.go  minion.go  testall.sh
go/test/integ/pems/: server.pem  server.pub.pem
js/: Dockerfile  Makefile  README.md  nxt_agent.js  nxt_async_socket.js  nxt_async_tunnel.js  nxt_bind_sockets.js  nxt_common.js  nxt_connector.js  nxt_hdr_pb.js  package-lock.json  package.json  proxy.pac  proxy_with_zoom.pac
js/files/: index.html  login.py  run.sh
js/files/http/config/: lighttpd.conf
js/public/: login.html
rust/: Cargo.toml  Dockerfile.build  Makefile
rust/agent/: Cargo.toml  build_android.sh  build_apple.sh  build_windows.ps1
rust/agent/src/: dns.rs  lib.rs  test.rs
rust/files/: gitlab.sh  login.py  pkce.go  run.sh
rust/files/http/certs/: lighttpd.pem
views/: agent_index.ejs  connector_index.ejs  nxt_failed.ejs  nxt_success.ejs
