[workspace]
members = [
    "agent",
    "platforms/docker",
]
resolver = "2"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
