[package]
name = "agent"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[dependencies]
log = "0.4.14"
mio = {version = "0.7", features = ["os-poll", "net", "os-util"]}
common = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }
websock = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }
fd = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }
l3proxy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }
dummy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }
netconn = { git = "ssh://git@gitlab.com/nextensio/common", branch = "gopa-master" }

[lib]
name = "nextensio"
crate-type = ["rlib", "staticlib"]

