[package]
name = "agent"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
stderrlog = "0.5.1"

[dependencies]
log = "0.4.14"
mio = {version = "0.7", features = ["os-poll", "net", "os-util"]}
common = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
websock = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
fd = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
l3proxy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
dummy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
netconn = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }

[lib]
name = "nextensio"
crate-type = ["rlib", "staticlib"]

