[package]
name = "agent"
version = "0.1.0"
authors = ["Nextensio <team@nextensio.net>"]
edition = "2018"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[target.'cfg(target_vendor = "apple")'.dependencies]
oslog = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winlog = "*"

[target.'cfg(target_os = "linux")'.dependencies]
counters = { git = "https://github.com/gopakumarce/R2.git", branch = "master"}
perf = { git = "https://github.com/gopakumarce/R2.git", branch = "master"}

[dependencies]
log = "0.4.14"
object-pool = { git = "https://github.com/gopakumarce/object-pool.git", branch = "gopa-objpool" }
mio = {version = "0.7", features = ["os-poll", "net", "os-util"]}
common = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
websock = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
fd = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
winpipe = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
l3proxy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
dummy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
netconn = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }
webproxy = { git = "ssh://git@gitlab.com/nextensio/common", branch = "master" }

[lib]
name = "nextensio"
crate-type = ["rlib", "staticlib"]

